--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -1,17 +1,17 @@
 import /init.decrypt.rc
 
+# Modules
+on early-init
+    # Load touch-related modules
+    insmod /vendor/lib/modules/chipone9916.ko
+    insmod /vendor/lib/modules/ilitek.ko
+    insmod /vendor/lib/modules/omnivision_tcm.ko
+
 on init
     setprop sys.usb.configfs 1
     setprop sys.usb.controller "musb-hdrc"
     setprop sys.usb.ffs.aio_compat 0
 
-# Modules
-on boot
-    # Load touch-related modules
-    insmod /vendor/lib/modules/ilitek.ko
-    insmod /vendor/lib/modules/omnivision_tcm.ko
-    insmod /vendor/lib/modules/chipone9916.ko
-    
 on fs && property:ro.debuggable=0
     # distinguish USB shoulde connect or not, i.e. CDP vs SDP
     write /sys/class/udc/musb-hdrc/device/cmode 2
