--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -1,5 +1,5 @@
 import /init.decrypt.rc
-
+import /vibrator-penangf.rc
 # Modules
 on early-init
     # Load touch-related modules
@@ -28,6 +28,6 @@ on post-fs
     symlink /dev/block/mmcblk0boot1 /dev/block/by-name/preloader_b
 
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
-
+    
 on boot
     start health-hal-2-1
