penangf: import vendor.trustonic.tee@1.1

--- a/recovery/root/init.decrypt.rc
+++ b/recovery/root/init.decrypt.rc
@@ -43,39 +43,51 @@ on property:crypto.ready=1
     start keymaster_attestation-1-1
     start vendor.gatekeeper-1-0
     start vendor.keymaster-4-1-trustonic
+    start tee-1-1
 
 on property:hwservicemanager.ready=true
     start mobicore
     start keymaster_attestation-1-1
     start vendor.gatekeeper-1-0
     start vendor.keymaster-4-1-trustonic
+    start tee-1-1
+
 
 on property:ro.crypto.state=unsupported
     stop mobicore
     stop keymaster_attestation-1-1
     stop vendor.gatekeeper-1-0
     stop vendor.keymaster-4-1-trustonic
+    stop tee-1-1
 
 on property:ro.crypto.state=unencrypted
     stop mobicore
     stop keymaster_attestation-1-1
     stop vendor.gatekeeper-1-0
     stop vendor.keymaster-4-1-trustonic
+    stop tee-1-1
 
 on property:twrp.decrypt.done=true
     stop mobicore
     stop keymaster_attestation-1-1
     stop vendor.gatekeeper-1-0
     stop vendor.keymaster-4-1-trustonic
-
+    stop tee-1-1
+    
 on property:crypto.ready=0
     stop mobicore
     stop keymaster_attestation-1-1
     stop vendor.gatekeeper-1-0
     stop vendor.keymaster-4-1-trustonic
-
+    stop tee-1-1
+    
+    service tee-1-1 /vendor/bin/hw/vendor.trustonic.tee@1.1-service
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+    
 on boot
-    start health-hal-2-1
     setprop sys.usb.config mtp,adb
     setprop sys.usb.state mtp,adb
     setprop persist.sys.usb.config mtp,adb 
